rubocop/examples/good/style_RegexpLiteral.rb
# Use %r only for regular expressions matching at least one '/' character.

# good
%r{^/(.*)$}
%r{^/blog/2011/(.*)$}
