rubocop/examples/bad/style_RegexpLiteral.rb
# Use %r only for regular expressions matching at least one '/' character.

# bad
%r{\s+}
